fixed overlap login button

--- a/css/login_style.css
+++ b/css/login_style.css
@@ -94,7 +94,7 @@ body .login {
   position: relative;
   width: 240px;
   border-top: 2px solid #3b2ad8;
-  height: 300px;
+  height: 350px;
   position: absolute;
   left: 0;
   right: 0;
@@ -210,6 +210,7 @@ body .login_fields__submit input {
   transition-property: background, color;
   transition-duration: 0.2s;
   width: 200px;
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 body .login_fields__submit input:focus {
